# graphviz-embed

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  vcpkg.json
.cargo/: config.toml
.github/workflows/: ci.yml  copilot-setup-steps.yml  python-wheels.yml
graphviz-embed/: Cargo.toml
graphviz-embed/src/: lib.rs
graphviz-embed/tests/: integration.rs
graphviz-py/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
graphviz-py/examples/: basic_usage.py
graphviz-py/python/graphviz_embed/: __init__.py  __init__.pyi
graphviz-py/src/: lib.rs
graphviz-py/tests/: test_graphviz.py
graphviz-sys/: Cargo.toml  build.rs
graphviz-sys/src/: lib.rs
patches/: 0001-use-pregenerated-parsers.patch
scripts/: cleanup-publish.sh  generate-parsers.sh  prepare-publish.sh
