[workspace]
resolver = "2"
members = [
    "graphviz-embed",
    "graphviz-sys",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrisjsewell/graphviz-embed"
keywords = ["graphviz", "graph", "visualization", "dot", "svg"]
categories = ["graphics", "visualization", "rendering"]

[workspace.dependencies]
graphviz-sys = { path = "graphviz-sys" }
thiserror = "1.0"
