[package]
name = "graphviz-sys"
description = "Low-level FFI bindings to Graphviz with vendored C source"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["graphviz", "ffi", "bindings", "sys"]
categories = ["external-ffi-bindings", "graphics"]
build = "build.rs"
links = "graphviz"

[features]
default = []
# Enable Cairo/Pango for PNG, PDF, and other raster output formats
cairo = []
# Use whole-archive linking for cdylib builds (Python extensions)
cdylib = []

[build-dependencies]
cmake = "0.1"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[dependencies]
libc = "0.2"

# Include vendored sources in the published crate
# These are large (~50MB) but necessary for standalone builds
[package.metadata.docs.rs]
features = ["cairo"]

# Files to include when publishing to crates.io
# In development, vendor/ contains git submodules; for publishing,
# the sources must be copied into the crate directory
# See scripts/prepare-publish.sh for the publishing workflow
